Fixed header. Stoped site from cutting the top and aligned language button

--- a/css/now.css
+++ b/css/now.css
@@ -65,10 +65,8 @@ ul {
 }
 
 .masthead {
-  position: relative;
-  display: table;
   width: 100%;
-  height: 100%;
+  min-height: 100%;
   background: #000000;
   background-position: center center;
   background-repeat: no-repeat;
@@ -115,9 +113,9 @@ ul {
 }
 
 .masthead img {
-  padding-bottom: 100px;
+  padding-bottom: 15%;
   min-width: 25%;
-  margin-top: -3%;
+  /* margin-top: -3%; */
 }
 
 @media screen and (max-width: 457px) {
